# reright

./: .editorconfig  .prettierrc  CONTRIBUTING.md  LICENSE.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
scripts/: bump-version.sh  check-version-sync.sh
src/: config.ts  main.tsx  window-ui-helper.ts
src-tauri/: Cargo.toml  reright.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ergonomic/: linux.rs  macos.rs  mod.rs  windows.rs
src/services/: ergonomic-requirements.ts  input-simulation.ts  llm.ts  operations.ts  settings.ts  updater.ts
src/types/: general.ts
src/ui/: app.tsx  i18n.ts
src/ui/assets/: normalize.css
src/ui/components/: buttons.tsx  containers.tsx  forms.tsx  key-binding-display.tsx  modal.tsx
src/ui/contexts/: settings.tsx
src/ui/screens/: howto.tsx  rewrites.tsx  settings.tsx
src/ui/styles/: colors.ts  dimensions.ts
src/ui/translations/: index.ts
src/utils/: log.ts  types.ts
tests/unit/services/: operations.test.ts
